[gd_scene load_steps=3 format=3 uid="uid://dyh224pr6boca"]

[ext_resource type="Script" uid="uid://d2k2es0o0malg" path="res://addons/Godoreographer/menu/menu_bar.gd" id="1_6rdbt"]
[ext_resource type="Script" uid="uid://cnbwfob78cfic" path="res://addons/Godoreographer/menu/file_menu.gd" id="1_x24qc"]

[node name="MenuBar" type="MenuBar"]
script = ExtResource("1_6rdbt")

[node name="FileMenu" type="PopupMenu" parent="."]
auto_translate_mode = 1
title = "File"
size = Vector2i(124, 100)
item_count = 4
item_0/text = "Create Project"
item_0/id = 0
item_1/text = "Load Project"
item_1/id = 1
item_1/disabled = true
item_2/text = "Save Project As..."
item_2/id = 2
item_2/disabled = true
item_3/text = "Save Project"
item_3/id = 3
item_3/disabled = true
script = ExtResource("1_x24qc")

[node name="WAVDialog" type="FileDialog" parent="."]
title = "Create New Project"
ok_button_text = "Select Audio"
mode_overrides_title = false
file_mode = 0
filters = PackedStringArray("*.wav")

[node name="LoadDialog" type="FileDialog" parent="."]
auto_translate_mode = 1
title = "Open a File"
ok_button_text = "Open"
mode_overrides_title = false
file_mode = 0
filters = PackedStringArray("*.tres")

[node name="SaveAsDialog" type="FileDialog" parent="."]
filters = PackedStringArray("*.tres")

[connection signal="index_pressed" from="FileMenu" to="FileMenu" method="_on_file_menu_pressed"]
[connection signal="file_selected" from="WAVDialog" to="FileMenu" method="on_WAV_file_selected"]
[connection signal="file_selected" from="SaveAsDialog" to="FileMenu" method="on_save_project"]
